[gd_scene load_steps=3 format=3 uid="uid://d758f04cqm0h"]

[ext_resource type="Script" path="res://Login.gd" id="1_xjqsh"]
[ext_resource type="Script" path="res://FindMatch.gd" id="2_g7egj"]

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -180.0
offset_right = 294.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Login" type="Control" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xjqsh")

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/Login"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -101.0
offset_right = 294.0
offset_bottom = 101.0
grow_vertical = 2
text = "Username


Email


Password"

[node name="UsernameText" type="LineEdit" parent="CanvasLayer/Control/Login/RichTextLabel"]
layout_mode = 0
offset_top = 25.0
offset_right = 278.0
offset_bottom = 56.0

[node name="EmainText" type="LineEdit" parent="CanvasLayer/Control/Login/RichTextLabel"]
layout_mode = 0
offset_top = 96.0
offset_right = 278.0
offset_bottom = 127.0
virtual_keyboard_type = 5

[node name="PasswordText" type="LineEdit" parent="CanvasLayer/Control/Login/RichTextLabel"]
layout_mode = 0
offset_top = 168.0
offset_right = 278.0
offset_bottom = 199.0

[node name="Register" type="Button" parent="CanvasLayer/Control/Login"]
layout_mode = 0
offset_left = 377.0
offset_top = 104.0
offset_right = 517.0
offset_bottom = 158.0
text = "Register"

[node name="Login" type="Button" parent="CanvasLayer/Control/Login"]
layout_mode = 0
offset_left = 377.0
offset_top = 206.0
offset_right = 517.0
offset_bottom = 260.0
text = "Login"

[node name="Errors" type="RichTextLabel" parent="CanvasLayer/Control/Login"]
layout_mode = 0
offset_left = 16.0
offset_top = 289.0
offset_right = 517.0
offset_bottom = 329.0

[node name="FindMatch" type="Control" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_g7egj")

[node name="Label" type="Label" parent="CanvasLayer/Control/FindMatch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -11.5
offset_right = 61.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Finding Match..."

[node name="FindMatch" type="Button" parent="CanvasLayer/Control/FindMatch"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -131.0
offset_top = -28.0
offset_right = 131.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "Lets Find A Match"

[node name="ReadyScreen" type="Control" parent="CanvasLayer/Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="CanvasLayer/Control/Login/Register" to="CanvasLayer/Control/Login" method="_on_register_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Login/Login" to="CanvasLayer/Control/Login" method="_on_login_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/FindMatch/FindMatch" to="CanvasLayer/Control/FindMatch" method="_on_find_match_pressed"]
